--- a/src/app/components/custom-card/custom-card.component.html
+++ b/src/app/components/custom-card/custom-card.component.html
@@ -1,11 +1,11 @@
 <ion-card class="margin-bottom" (click)="navigate(forwardRoute)">
   <div class="container">
-    <img [src]="itemDetails.image" [style.opacity]="cardOpacity"/>
+    <img [src]="itemDetails.first_image" [style.opacity]="cardOpacity"/>
     <div
       class="title"
       [ngStyle]="currentlangauge == 'ar' ? { right: '13px' } : { left: '13px' }"
     >
-      <p class="fn-14 dalel-Bold white-color">{{ itemDetails.name }}</p>
+      <p class="fn-14 dalel-Bold white-color">{{ itemDetails.title }}</p>
     </div>
     <div
       class="location"
@@ -17,7 +17,7 @@
       class="location-address"
       [ngStyle]="currentlangauge == 'ar' ? { right: '30px' } : { left: '30px' }"
     >
-      <p class="fn-14 dalel-Regular white-color">{{ itemDetails.city }}</p>
+      <p class="fn-14 dalel-Regular white-color">{{ itemDetails.city_title }}</p>
     </div>
     <div
       class="address-detail"
