--- a/src/app/components/custom-details/custom-details.component.html
+++ b/src/app/components/custom-details/custom-details.component.html
@@ -1,7 +1,7 @@
 <div class="item-details" >
   <div class="name-rating-container">
     <div class="name">
-      <h5 class="fn-16 dalel-Bold"> {{ ItemDetails.name|translate }}</h5>
+      <h5 class="fn-16 dalel-Bold"> {{ ItemDetails.title }}</h5>
     </div>
 
     <div class="rating">
@@ -9,7 +9,7 @@
         <div class="rating-container">
           <ion-icon color="secondary" slot="start" name="star"></ion-icon>
           <span class="white-color fn-12 dalel-Regular">{{
-            ItemDetails.rating
+            ItemDetails.rate
           }}</span>
         </div>
       </div>
@@ -20,7 +20,7 @@
     <ion-item lines="none" class="address" [ngClass]="isDetailed ? 'details' : ''">
       <ion-label>
         <p class="fn-14 dalel-Regular dark-black-color">
-           {{ ItemDetails.city }} - {{ ItemDetails.address }}
+           {{ ItemDetails.city_title }} - {{ ItemDetails.neighborhood_title }}
         </p>
       </ion-label>
       <ion-icon slot="start" name="location-sharp" color="primary"></ion-icon>
@@ -31,9 +31,7 @@
         class="fn-10 dalel-Bold primary-color"
         [ngClass]="currentlangauge == 'ar' ? 'float-left' : 'float-right'"
       >
-         {{ ItemDetails.price }} {{ ItemDetails.unit |translate }}/{{
-          ItemDetails.perUnit|translate
-        }}
+         {{ ItemDetails.price }} {{ 'currency' |translate }}/{{'one night'|translate }}
       </p>
     </div>
   </div>
