--- a/src/app/modules/main/main.page.scss
+++ b/src/app/modules/main/main.page.scss
@@ -122,6 +122,9 @@
   }
   img {
     border-radius: 10px;
+    height: 160px;
+    width: 100%;
+    object-fit: cover;
   }
   //margin-bottom: 23px;
 }
