--- a/src/app/components/custom-card/custom-card.component.html
+++ b/src/app/components/custom-card/custom-card.component.html
@@ -1,28 +1,16 @@
 <ion-card class="margin-bottom" (click)="navigate(forwardRoute)">
   <div class="container">
-    <img [src]="itemDetails.first_image" [style.opacity]="cardOpacity"/>
-    <div
-      class="title"
-      [ngStyle]="currentlangauge == 'ar' ? { right: '13px' } : { left: '13px' }"
-    >
+    <img [src]="itemDetails.first_image" [style.opacity]="cardOpacity" />
+    <div class="title" [ngClass]="currentlangauge == 'ar' ? 'title-ar':'title-en'">
       <p class="fn-14 dalel-Bold white-color">{{ itemDetails.title }}</p>
     </div>
-    <div
-      class="location"
-      [ngStyle]="currentlangauge == 'ar' ? { right: '10px' } : { left: '10px' }"
-    >
+    <div class="location" [ngClass]="currentlangauge == 'ar' ? 'location-ar':'location-en'    ">
       <ion-icon name="location-sharp" color="primary"></ion-icon>
     </div>
-    <div
-      class="location-address"
-      [ngStyle]="currentlangauge == 'ar' ? { right: '30px' } : { left: '30px' }"
-    >
+    <div class="location-address" [ngClass]="currentlangauge == 'ar'? 'location-address-ar':'location-address-en'">
       <p class="fn-14 dalel-Regular white-color">{{ itemDetails.city_title }}</p>
     </div>
-    <div
-      class="address-detail"
-      [ngStyle]="currentlangauge == 'ar' ? { left: '10px' } : { right: '10px' }"
-    >
+    <div class="address-detail" [ngClass]="currentlangauge == 'ar'? 'address-detail-ar':'address-detail-en'">
       <ion-icon name="arrow-forward-circle-outline" color="white"></ion-icon>
     </div>
   </div>
