--- a/src/app/modules/category-list/category-list.page.html
+++ b/src/app/modules/category-list/category-list.page.html
@@ -9,7 +9,7 @@
 <ion-content class="ion-padding" >
   <app-custom-card
     [itemDetails]="item"
-    [forwardRoute]="'/tabs/main/categories'"
+    [forwardRoute]="'/tabs/main'"
     *ngFor="let item of sectionAllItems"
   ></app-custom-card>
 
