--- a/src/app/modules/main/main.page.html
+++ b/src/app/modules/main/main.page.html
@@ -94,7 +94,7 @@
       <ng-template swiperSlide *ngFor="let item of nearDepartments">
         <app-custom-card
           [itemDetails]="item"
-          [forwardRoute]="'/tabs/main/categories'"
+          [forwardRoute]="'/tabs/main'"
         ></app-custom-card>
       </ng-template>
     </swiper>
