--- a/src/app/modules/favourites/favourites.page.html
+++ b/src/app/modules/favourites/favourites.page.html
@@ -18,33 +18,33 @@
       >
         <ion-card
           class="ion-no-margin"
-          routerLink="/tabs/main/categories/{{item.catID}}/{{item.id}}"
+          routerLink="/tabs/main/details/{{item.id}}" *ngIf="item!=null"
         >
           <img src="./../../../assets/images/512.png" />
 
           <div class="price-container">
             <span class="white-color fn-12 dalel-Regular"
-              >{{item.price}} {{item.unit|translate}}</span
+              >{{item.price}} {{'currency'|translate}}</span
             >
           </div>
 
           <ion-card-content>
             <!-- <app-custom-details [ItemDetails]="item"></app-custom-details> -->
             <div class="name">
-              <p class="fn-14 dalel-Bold dark-black-color">{{item.name}}</p>
+              <p class="fn-14 dalel-Bold dark-black-color">{{item.title}}</p>
             </div>
             <div class="rating-address-container">
               <div class="address-container">
                 <ion-icon name="location-sharp" color="primary"></ion-icon>
                 <p class="fn-14 dalel-Regular dark-black-color">
-                   {{item.city}}
+                   {{item.city_title}}
                 </p>
               </div>
 
-              <div class="rating-container">
+              <div class="rating-container" *ngIf="item.rate!=0">
                 <ion-icon color="secondary" slot="end" name="star"></ion-icon>
-                <span class="white-color fn-10 dalel-Regular"
-                  >{{item.rating}}</span
+                <span  class="white-color fn-10 dalel-Regular"
+                  >{{item.rate}}</span
                 >
               </div>
             </div>
