--- a/src/app/modules/search-filter/search-filter.page.html
+++ b/src/app/modules/search-filter/search-filter.page.html
@@ -1,23 +1,25 @@
-<app-header
-  [title]="'search-filter'"
-  [isEditable]="false"
-  [backwardRoute]="'/tabs/main'"
-  [isMain]="false"
-  class="header-height"
-></app-header>
+<app-header [title]="'search-filter'" [isEditable]="false" [backwardRoute]="'/tabs/main'" [isMain]="false"
+  class="header-height"></app-header>
 
-<ion-content class="ion-padding" >
+<ion-content class="ion-padding">
   <h5 class="fn-14 dalel-Bold dark-black-color">
     {{"search results filter"|translate}}
   </h5>
 
   <ion-item lines="none" class="select-container">
-    <ion-select
-      (ionChange)="selectPlace($event)"
-      placeholder='{{"search with place name"|translate}}'
-      okText='{{"ok"|translate}}'
-      cancelText='{{"cancel"|translate}}'
-    >
+    <!-- <ion-select (ionChange)="selectPlace($event)" placeholder='{{"search with place name"|translate}}'
+      okText='{{"ok"|translate}}' cancelText='{{"cancel"|translate}}'>
+      <ion-select-option value="brown">Brown</ion-select-option>
+      <ion-select-option value="blonde">Blonde</ion-select-option>
+      <ion-select-option value="black">Black</ion-select-option>
+      <ion-select-option value="red">Red</ion-select-option>
+    </ion-select> -->
+    <ion-input [(ngModel)]="title" placeholder='{{"search with place name"|translate}}'></ion-input>
+  </ion-item>
+
+  <ion-item lines="none" class="select-container">
+    <ion-select (ionChange)="selectPlace($event)" placeholder='{{"choose place"|translate}}' okText='{{"ok"|translate}}'
+      cancelText='{{"cancel"|translate}}'>
       <ion-select-option value="brown">Brown</ion-select-option>
       <ion-select-option value="blonde">Blonde</ion-select-option>
       <ion-select-option value="black">Black</ion-select-option>
@@ -26,12 +28,8 @@
   </ion-item>
 
   <ion-item lines="none" class="select-container">
-    <ion-select
-      (ionChange)="selectPlace($event)"
-      placeholder='{{"choose place"|translate}}'
-      okText='{{"ok"|translate}}'
-      cancelText='{{"cancel"|translate}}'
-    >
+    <ion-select (ionChange)="selectPlace($event)" placeholder='{{ "choose city"|translate}}' okText='{{"ok"|translate}}'
+      cancelText='{{"cancel"|translate}}'>
       <ion-select-option value="brown">Brown</ion-select-option>
       <ion-select-option value="blonde">Blonde</ion-select-option>
       <ion-select-option value="black">Black</ion-select-option>
@@ -40,26 +38,8 @@
   </ion-item>
 
   <ion-item lines="none" class="select-container">
-    <ion-select
-      (ionChange)="selectPlace($event)"
-      placeholder='{{ "choose city"|translate}}'
-      okText='{{"ok"|translate}}'
-      cancelText='{{"cancel"|translate}}'
-    >
-      <ion-select-option value="brown">Brown</ion-select-option>
-      <ion-select-option value="blonde">Blonde</ion-select-option>
-      <ion-select-option value="black">Black</ion-select-option>
-      <ion-select-option value="red">Red</ion-select-option>
-    </ion-select>
-  </ion-item>
-
-  <ion-item lines="none" class="select-container">
-    <ion-select
-      (ionChange)="selectPlace($event)"
-      placeholder='{{ "choose neighborhood"|translate}}'
-      okText='{{"ok"|translate}}'
-      cancelText='{{"cancel"|translate}}'
-    >
+    <ion-select (ionChange)="selectPlace($event)" placeholder='{{ "choose neighborhood"|translate}}'
+      okText='{{"ok"|translate}}' cancelText='{{"cancel"|translate}}'>
       <ion-select-option value="brown">Brown</ion-select-option>
       <ion-select-option value="blonde">Blonde</ion-select-option>
       <ion-select-option value="black">Black</ion-select-option>
@@ -68,14 +48,10 @@
   </ion-item>
 
   <div class="flex-container">
-    <div  [ngClass]="currentlangauge == 'ar' ?'item-left':'item-right' ">
+    <div [ngClass]="currentlangauge == 'ar' ?'item-left':'item-right' ">
       <ion-item lines="none" class="select-container">
-        <ion-select
-          (ionChange)="selectPlace($event)"
-          placeholder='{{ "rooms number"|translate}}'
-          okText='{{"ok"|translate}}'
-          cancelText='{{"cancel"|translate}}'
-        >
+        <ion-select (ionChange)="selectPlace($event)" placeholder='{{ "rooms number"|translate}}'
+          okText='{{"ok"|translate}}' cancelText='{{"cancel"|translate}}'>
           <ion-select-option value="brown">Brown</ion-select-option>
           <ion-select-option value="blonde">Blonde</ion-select-option>
           <ion-select-option value="black">Black</ion-select-option>
@@ -86,12 +62,8 @@
 
     <div [ngClass]="currentlangauge == 'ar' ?'item-right':'item-left' ">
       <ion-item lines="none" class="select-container">
-        <ion-select
-          (ionChange)="selectPlace($event)"
-          placeholder='{{ "people number"|translate}}'
-          okText='{{"ok"|translate}}'
-          cancelText='{{"cancel"|translate}}'
-        >
+        <ion-select (ionChange)="selectPlace($event)" placeholder='{{ "people number"|translate}}'
+          okText='{{"ok"|translate}}' cancelText='{{"cancel"|translate}}'>
           <ion-select-option value="brown">Brown</ion-select-option>
           <ion-select-option value="blonde">Blonde</ion-select-option>
           <ion-select-option value="black">Black</ion-select-option>
@@ -101,17 +73,13 @@
     </div>
   </div>
 
-  <p class="fn-14 dalel-Regular primary-color">   {{"determine space"|translate}}</p>
+  <p class="fn-14 dalel-Regular primary-color"> {{"determine space"|translate}}</p>
 
   <div class="flex-container">
-    <div  [ngClass]="currentlangauge == 'ar' ?'item-left':'item-right' ">
+    <div [ngClass]="currentlangauge == 'ar' ?'item-left':'item-right' ">
       <ion-item lines="none" class="select-container">
-        <ion-select
-          (ionChange)="selectPlace($event)"
-          placeholder='{{ "least space"|translate}}'
-          okText='{{"ok"|translate}}'
-          cancelText='{{"cancel"|translate}}'
-        >
+        <ion-select (ionChange)="selectPlace($event)" placeholder='{{ "least space"|translate}}'
+          okText='{{"ok"|translate}}' cancelText='{{"cancel"|translate}}'>
           <ion-select-option value="brown">Brown</ion-select-option>
           <ion-select-option value="blonde">Blonde</ion-select-option>
           <ion-select-option value="black">Black</ion-select-option>
@@ -122,12 +90,8 @@
 
     <div [ngClass]="currentlangauge == 'ar' ?'item-right':'item-left' ">
       <ion-item lines="none" class="select-container">
-        <ion-select
-          (ionChange)="selectPlace($event)"
-          placeholder='{{ "highest space"|translate}}'
-          okText='{{"ok"|translate}}'
-          cancelText='{{"cancel"|translate}}'
-        >
+        <ion-select (ionChange)="selectPlace($event)" placeholder='{{ "highest space"|translate}}'
+          okText='{{"ok"|translate}}' cancelText='{{"cancel"|translate}}'>
           <ion-select-option value="brown">Brown</ion-select-option>
           <ion-select-option value="blonde">Blonde</ion-select-option>
           <ion-select-option value="black">Black</ion-select-option>
@@ -137,17 +101,13 @@
     </div>
   </div>
 
-  <p class="fn-14 dalel-Regular primary-color">   {{"determine price"|translate}}</p>
+  <p class="fn-14 dalel-Regular primary-color"> {{"determine price"|translate}}</p>
 
   <div class="flex-container">
-    <div  [ngClass]="currentlangauge == 'ar' ?'item-left':'item-right' ">
+    <div [ngClass]="currentlangauge == 'ar' ?'item-left':'item-right' ">
       <ion-item lines="none" class="select-container">
-        <ion-select
-          (ionChange)="selectPlace($event)"
-          placeholder='{{ "least price"|translate}}'
-          okText='{{"ok"|translate}}'
-          cancelText='{{"cancel"|translate}}'
-        >
+        <ion-select (ionChange)="selectPlace($event)" placeholder='{{ "least price"|translate}}'
+          okText='{{"ok"|translate}}' cancelText='{{"cancel"|translate}}'>
           <ion-select-option value="brown">Brown</ion-select-option>
           <ion-select-option value="blonde">Blonde</ion-select-option>
           <ion-select-option value="black">Black</ion-select-option>
@@ -158,12 +118,8 @@
 
     <div [ngClass]="currentlangauge == 'ar' ?'item-right':'item-left' ">
       <ion-item lines="none" class="select-container">
-        <ion-select
-          (ionChange)="selectPlace($event)"
-          placeholder='{{  "highest price"|translate}}'
-          okText='{{"ok"|translate}}'
-          cancelText='{{"cancel"|translate}}'
-        >
+        <ion-select (ionChange)="selectPlace($event)" placeholder='{{  "highest price"|translate}}'
+          okText='{{"ok"|translate}}' cancelText='{{"cancel"|translate}}'>
           <ion-select-option value="brown">Brown</ion-select-option>
           <ion-select-option value="blonde">Blonde</ion-select-option>
           <ion-select-option value="black">Black</ion-select-option>
@@ -177,25 +133,29 @@
     <h5 class="fn-14 dalel-Bold dark-black-color">
       {{"Miscellaneous"|translate}}
     </h5>
-  
+
     <div class="items-container">
       <div>
         <ion-item lines="none">
-          <ion-label class="fn-14 gray-color dalel-Regular" [ngClass]="currentlangauge == 'ar' ? 'align-right':'align-left'">
+          <ion-label class="fn-14 gray-color dalel-Regular"
+            [ngClass]="currentlangauge == 'ar' ? 'align-right':'align-left'">
             {{"show available only"|translate}}
           </ion-label>
-          <ion-checkbox color="secondary" slot="start" value="true" [ngClass]="currentlangauge == 'ar' ?'margin-right':'margin-left'"></ion-checkbox>
+          <ion-checkbox color="secondary" slot="start" value="true"
+            [ngClass]="currentlangauge == 'ar' ?'margin-right':'margin-left'"></ion-checkbox>
         </ion-item>
       </div>
       <div>
         <ion-item lines="none">
-          <ion-label class="fn-14 gray-color dalel-Regular" [ngClass]="currentlangauge == 'ar' ? 'align-right':'align-left'">
+          <ion-label class="fn-14 gray-color dalel-Regular"
+            [ngClass]="currentlangauge == 'ar' ? 'align-right':'align-left'">
             {{ "show offers only"|translate}}
           </ion-label>
-          <ion-checkbox color="secondary" slot="start" value="true" [ngClass]="currentlangauge == 'ar' ?'margin-right':'margin-left'"></ion-checkbox>
+          <ion-checkbox color="secondary" slot="start" value="true"
+            [ngClass]="currentlangauge == 'ar' ?'margin-right':'margin-left'"></ion-checkbox>
         </ion-item>
       </div>
-     
+
     </div>
   </div>
 
@@ -203,52 +163,18 @@
     <h5 class="fn-14 dalel-Bold dark-black-color">
       {{ "Categories"|translate}}
     </h5>
-  
+
     <div class="items-container">
-      <div>
+      <div *ngFor="let category of categories">
         <ion-item lines="none">
-          <ion-label class="fn-14 gray-color dalel-Regular" [ngClass]="currentlangauge == 'ar' ? 'align-right':'align-left'">
-            {{"events"|translate}}
+          <ion-label class="fn-14 gray-color dalel-Regular"
+            [ngClass]="currentlangauge == 'ar' ? 'align-right':'align-left'">
+            {{category.title}}
           </ion-label>
-          <ion-checkbox color="secondary" slot="start" value="true" [ngClass]="currentlangauge == 'ar' ?'margin-right':'margin-left'"></ion-checkbox>
+          <ion-checkbox (ionChange)="chooseCategory(category.id)" color="secondary" slot="start" value="true"
+            [ngClass]="currentlangauge == 'ar' ?'margin-right':'margin-left'"></ion-checkbox>
         </ion-item>
       </div>
-      <div>
-        <ion-item lines="none">
-          <ion-label class="fn-14 gray-color dalel-Regular" [ngClass]="currentlangauge == 'ar' ? 'align-right':'align-left'">
-            {{ "couples"|translate}}
-          </ion-label>
-          <ion-checkbox color="secondary" slot="start" value="true" [ngClass]="currentlangauge == 'ar' ?'margin-right':'margin-left'"></ion-checkbox>
-        </ion-item>
-      </div>
-
-      <div>
-        <ion-item lines="none">
-          <ion-label class="fn-14 gray-color dalel-Regular" [ngClass]="currentlangauge == 'ar' ? 'align-right':'align-left'">
-            {{ "travelers"|translate}}
-          </ion-label>
-          <ion-checkbox color="secondary" slot="start" value="true" [ngClass]="currentlangauge == 'ar' ?'margin-right':'margin-left'"></ion-checkbox>
-        </ion-item>
-      </div>
-
-      <div>
-        <ion-item lines="none">
-          <ion-label class="fn-14 gray-color dalel-Regular" [ngClass]="currentlangauge == 'ar' ? 'align-right':'align-left'">
-            {{ "families"|translate}}
-          </ion-label>
-          <ion-checkbox color="secondary" slot="start" value="true" [ngClass]="currentlangauge == 'ar' ?'margin-right':'margin-left'"></ion-checkbox>
-        </ion-item>
-      </div>
-
-      <div>
-        <ion-item lines="none">
-          <ion-label class="fn-14 gray-color dalel-Regular" [ngClass]="currentlangauge == 'ar' ? 'align-right':'align-left'">
-            {{ "singles"|translate}}
-          </ion-label>
-          <ion-checkbox color="secondary" slot="start" value="true" [ngClass]="currentlangauge == 'ar' ?'margin-right':'margin-left'"></ion-checkbox>
-        </ion-item>
-      </div>
-     
     </div>
   </div>
 
@@ -256,70 +182,24 @@
     <h5 class="fn-14 dalel-Bold dark-black-color">
       {{ "facilities"|translate}}
     </h5>
-  
+
     <div class="items-container">
-      <div>
+      <div *ngFor="let option of options">
         <ion-item lines="none">
-          <ion-label class="fn-14 gray-color dalel-Regular" [ngClass]="currentlangauge == 'ar' ? 'align-right':'align-left'">
-            {{"car entrance"|translate}}
+          <ion-label class="fn-14 gray-color dalel-Regular"
+            [ngClass]="currentlangauge == 'ar' ? 'align-right':'align-left'">
+            {{option.title}}
           </ion-label>
-          <ion-checkbox color="secondary" slot="start" value="true" [ngClass]="currentlangauge == 'ar' ?'margin-right':'margin-left'"></ion-checkbox>
+          <ion-checkbox color="secondary" slot="start" value="true" (ionChange)="chooseOption(option.id)"
+            [ngClass]="currentlangauge == 'ar' ?'margin-right':'margin-left'"></ion-checkbox>
         </ion-item>
       </div>
-      <div>
-        <ion-item lines="none">
-          <ion-label class="fn-14 gray-color dalel-Regular" [ngClass]="currentlangauge == 'ar' ? 'align-right':'align-left'">
-            {{"Maid's room"|translate}}
-          </ion-label>
-          <ion-checkbox color="secondary" slot="start" value="true" [ngClass]="currentlangauge == 'ar' ?'margin-right':'margin-left'"></ion-checkbox>
-        </ion-item>
-      </div>
-
-      <div>
-        <ion-item lines="none">
-          <ion-label class="fn-14 gray-color dalel-Regular" [ngClass]="currentlangauge == 'ar' ? 'align-right':'align-left'">
-            {{ "driver's room"|translate}}
-          </ion-label>
-          <ion-checkbox color="secondary" slot="start" value="true" [ngClass]="currentlangauge == 'ar' ?'margin-right':'margin-left'"></ion-checkbox>
-        </ion-item>
-      </div>
-
-      <div>
-        <ion-item lines="none">
-          <ion-label class="fn-14 gray-color dalel-Regular" [ngClass]="currentlangauge == 'ar' ? 'align-right':'align-left'">
-            {{ "pool"|translate}}
-          </ion-label>
-          <ion-checkbox color="secondary" slot="start" value="true" [ngClass]="currentlangauge == 'ar' ?'margin-right':'margin-left'"></ion-checkbox>
-        </ion-item>
-      </div>
-
-      <div>
-        <ion-item lines="none">
-          <ion-label class="fn-14 gray-color dalel-Regular" [ngClass]="currentlangauge == 'ar' ? 'align-right':'align-left'">
-            {{ "elevator"|translate}}
-          </ion-label>
-          <ion-checkbox color="secondary" slot="start" value="true" [ngClass]="currentlangauge == 'ar' ?'margin-right':'margin-left'"></ion-checkbox>
-        </ion-item>
-      </div>
-
-      <div>
-        <ion-item lines="none">
-          <ion-label class="fn-14 gray-color dalel-Regular" [ngClass]="currentlangauge == 'ar' ? 'align-right':'align-left'">
-            {{ "Basement"|translate}}
-          </ion-label>
-          <ion-checkbox color="secondary" slot="start" value="true" [ngClass]="currentlangauge == 'ar' ?'margin-right':'margin-left'"></ion-checkbox>
-        </ion-item>
-      </div>
-
-  
-     
     </div>
   </div>
 
-  <ion-button expand="block" routerLink="/tabs/main/search-results">
+  <ion-button expand="block" (click)="getItemsByFilters()" [routerAnimation]>
     <span class="auth-btn fn-16 white-color dalel-Bold">
       {{ "search"|translate}}
     </span>
-  </ion-button> 
+  </ion-button>
 </ion-content>
-
