--- a/src/app/modules/category-details/category-details.page.html
+++ b/src/app/modules/category-details/category-details.page.html
@@ -1,15 +1,26 @@
-<app-header [title]="'details'" [isEditable]="false" [backwardRoute]="'/tabs/main'" [isMain]="false"
-  class="header-height"></app-header>
+<app-header
+  [title]="'details'"
+  [isEditable]="false"
+  [backwardRoute]="'/tabs/main'"
+  [isMain]="false"
+  class="header-height"
+></app-header>
 
 <ion-content class="ion-padding">
   <div class="item-image">
     <img src="./../../../assets/images/1024-500.png" />
-    <ion-icon (click)="addToFavourite()" [ngClass]="currentlangauge =='ar' ?'fav-ar':'fav-en' "
-      [src]="itemDetails?.is_favourite ? './../../../assets/icon/fav-active.svg' :'./../../../assets/icon/fav-inactive.svg'">
+    <ion-icon
+      (click)="addToFavourite()"
+      [ngClass]="currentlangauge =='ar' ?'fav-ar':'fav-en' "
+      [src]="itemDetails?.is_favourite ? './../../../assets/icon/fav-active.svg' :'./../../../assets/icon/fav-inactive.svg'"
+    >
     </ion-icon>
 
     <div class="details-container ion-padding">
-      <app-custom-details [ItemDetails]="itemDetails" [isDetailed]="true"></app-custom-details>
+      <app-custom-details
+        [ItemDetails]="itemDetails"
+        [isDetailed]="true"
+      ></app-custom-details>
     </div>
   </div>
 
@@ -29,7 +40,6 @@
     <div>
       <ion-icon src="./../../../assets/icon/bed.svg"></ion-icon>
       <p class="fn-14 dalel-Regular secondary-color">
-
         {{itemDetails?.rooms_count}} {{'rooms'|translate}}
       </p>
     </div>
@@ -56,9 +66,14 @@
       </div>
     </div>
 
-    <swiper #swiper [config]="configSlider" class="custom-swiper" [dir]="currentlangauge == 'ar' ? 'rtl' : 'ltr'">
+    <swiper
+      #swiper
+      [config]="configSlider"
+      class="custom-swiper"
+      [dir]="currentlangauge == 'ar' ? 'rtl' : 'ltr'"
+    >
       <ng-template swiperSlide *ngFor="let image of itemDetails?.images">
-        <img [src]="image.image" />
+        <img class="slider-image" [src]="image.image" />
       </ng-template>
     </swiper>
   </div>
@@ -83,7 +98,10 @@
     </div>
   </div>
 
-  <ion-button expand="block" routerLink="/tabs/main/reservation">
+  <ion-button
+    expand="block"
+    (click)=" storeOrder()"
+  >
     <span class="auth-btn fn-16 white-color dalel-Bold">
       {{ "reserve now"|translate}}
     </span>
