--- a/src/app/modules/my-reservations/my-reservations.page.scss
+++ b/src/app/modules/my-reservations/my-reservations.page.scss
@@ -58,50 +58,40 @@ ion-card {
       height: 160px;
       object-fit: cover;
       object-position: initial;
-      //border-radius: 10px;
     }
 
     .title {
       position: absolute;
       bottom: 30px;
-     // right: 13px;
-    //  color: var(--ion-color-white);
+    
       margin-bottom: 7px;
       p {
-       // font-size: 15px;
         margin: 0px;
-      //  font-family: "Cairo-SemiBold";
       }
     }
 
     .location {
       position: absolute;
       bottom: 5px;
-      //right: 10px;
-     // font-size: 14px;
-     // font-family: "Cairo-Regular";
+     
       ion-icon {
         font-size: 20px;
       }
-      //text-decoration: underline;
     }
 
     .location-address {
       position: absolute;
-    //  color: var(--ion-color-white);
-     // font-family: "Cairo-Regular";
+   
       font-size: 10px;
       bottom: 13px;
-      //right: 35px;
       p {
-        margin: 0px;
+        margin:0 0 -5px 0;
       }
     }
 
     .rating {
       position: absolute;
       bottom: 16px;
-     // left: 16px;
       text-align: center;
       padding: 2px 0px;
       width: 40px;
