--- a/src/app/modules/my-reservations/my-reservations.page.html
+++ b/src/app/modules/my-reservations/my-reservations.page.html
@@ -30,7 +30,7 @@
   <div *ngIf="reservationsType==current">
     <ion-card
       class="ion-no-margin"
-      *ngFor="let item of oldReservations"
+      *ngFor="let item of currentReservations"
       routerLink="/tabs/my-reservations/my-reservations-details/{{item.id}}"
     >
       <div class="container">
@@ -82,10 +82,10 @@
     </ion-card>
   </div>
 
-  <div *ngIf="reservationsType">
+  <div *ngIf="reservationsType==old">
     <ion-card
       class="ion-no-margin"
-      *ngFor="let item of currentReservations"
+      *ngFor="let item of oldReservations"
       routerLink="/tabs/my-reservations/my-reservations-details/{{item.id}}"
     >
       <div class="container">
