--- a/src/app/modules/favourites/favourites.page.html
+++ b/src/app/modules/favourites/favourites.page.html
@@ -6,6 +6,9 @@
   class="header-height"
 ></app-header>
 <ion-content class="custom-padding">
+  <div *ngIf="noFavourites" class="no-data">
+    <p>{{"no favourites items"|translate}}</p>
+   </div>
   <ion-grid>
     <ion-row>
       <ion-col
