--- a/src/app/modules/category-list/category-list.page.html
+++ b/src/app/modules/category-list/category-list.page.html
@@ -7,6 +7,10 @@
 ></app-header>
 
 <ion-content class="ion-padding" >
+  <div *ngIf="noItems" class="no-data">
+    <p>{{"no items in this section"|translate}}</p>
+   </div>
+  
   <app-custom-card
     [itemDetails]="item"
     [forwardRoute]="'/tabs/main'"
