--- a/src/app/modules/tabs/tabs.page.html
+++ b/src/app/modules/tabs/tabs.page.html
@@ -1,10 +1,19 @@
 <ion-tabs #tabs (ionTabsDidChange)="setCurrentTab()">
   <ion-tab-bar slot="bottom">
-    <ion-tab-button [ngClass]="selectedTab==tab.tabName?'selected':''" [tab]="tab.tabName" *ngFor="let tab of tabsData">
+    <ion-tab-button
+      [ngClass]="selectedTab==tab.tabName?'selected':''"
+      [tab]="tab.tabName"
+      *ngFor="let tab of tabsData"
+    >
       <ion-icon
         [src]="selectedTab==tab.tabName? tab.tabActiveIcon:tab.tabNotActiveIcon"
       ></ion-icon>
-      <ion-label [ngClass]="selectedTab==tab.tabName?'selected-label':''" > {{tab.tabName|translate}} </ion-label>
+      <ion-label [ngClass]="selectedTab==tab.tabName?'selected-label':''">
+        {{tab.tabName|translate}}
+      </ion-label>
+      <ion-badge *ngIf="tab.tabName=='notifications'" color="primary">
+        <span ngClass="badge-color">10</span>
+      </ion-badge>
     </ion-tab-button>
   </ion-tab-bar>
 </ion-tabs>
